--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,5 @@
 _repo: Memoirs-of-Napoleon-Bonaparte-Volume-13_3563
-_version: 0.2.0
+_version: 0.2.1
 contributor:
   creator:
     editor:
@@ -42,5 +42,6 @@ subjects:
 - !lcsh 'Napoleon I, Emperor of the French, 1769-1821'
 - !lcc 'DC'
 - !lcsh 'Bourrienne, Louis Antoine Fauvelet de, 1769-1834'
+- GITenberg
 title: Memoirs of Napoleon Bonaparte — Volume 13
 url: http://www.gutenberg.org/ebooks/3563
